--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/receive-line-user/receive-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/receive-line-user/receive-line-user.component.html
@@ -21,7 +21,7 @@
     <div class="ui segment {{loading?'loading':''}}">
       <div class="ui grid">
         <div class="two wide column"></div>
-        <div class="seven wide column">
+        <!-- <div class="seven wide column">
           <div class="ui form">
             <div class="inline fields">
               <div class="sixteen wide field">
@@ -33,7 +33,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="seven wide column">
           <div class="ui form">
             <div class="inline fields">
@@ -51,7 +51,7 @@
       <form ngNativeValidate (submit)="onSend($event)">
         <div class="ui grid">
           <div class="sixteen wide column">
-            <div >
+            <div>
               <table id="sendLineUser" class="ui small celled table aligned hover striped selectable nowrap" style="width:100%;">
                 <thead id="trDrinamic">
                 </thead>
