--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
@@ -2,7 +2,7 @@
 <div class="ui grid">
     <div class="sixteen wide column">
         
-        <div class="ui top attached header segment">
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <span>ค้นหารายการคุมเช็ค</span>
         </div>
 
@@ -34,7 +34,7 @@
                 <!-- row 2 -->
                 <div class="inline fields  ui grid">
                     <div class="three wide field ">
-                        <label class="text-right full-width">สรรพสามิตพื้นที่สาขา</label>
+                        <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่สาขา</label>
                     </div>
                     <div class="four wide field ">
                         <select name="branch" id="branch" class="ui dropdown ai search full-width office">
@@ -60,7 +60,7 @@
                     <div class="four wide field ">
                         <div class="ui calendar full-width" id="dateF">
                             <div class="ui input left icon">
-                                <i class="calendar alter nate outline icon"></i>
+                                <i class="clock icon"></i>
                                 <input name="dateFrom" type="text" id="dateFrom" autocomplete="off" [attr.readonly]="null"
                                     placeholder="วว/ดด/ปปปป" [attr.required]="true">
                             </div>
@@ -73,7 +73,7 @@
                         <div class="ui input">
                             <div class="ui calendar full-width" id="dateT">
                                 <div class="ui input left icon">
-                                    <i class="calendar alter nate outline icon"></i>
+                                    <i class="clock icon"></i>
                                     <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null"
                                         placeholder="วว/ดด/ปปปป" [attr.required]="true">
                                 </div>
@@ -84,7 +84,7 @@
                 </div><br>
                 <div class="ui stackable center aligned page grid">
                     <button class="ui mini primary button" type="button" (click)="search()"><i class="search icon"></i>ค้นหา</button>
-                    <button class="ui mini gray button " type="button" (click)="clear()"><i class="delete icon"></i>ล้างข้อมูล</button>
+                    <button class="ui mini gray button " type="button" (click)="clear()"><i class="sync icon"></i>ล้างข้อมูล</button>
                 </div><br>
             </form>
 
