--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
@@ -84,7 +84,7 @@
                 </div><br>
                 <div class="ui stackable center aligned page grid">
                     <button class="ui mini primary button" type="button" (click)="search()"><i class="search icon"></i>ค้นหา</button>
-                    <button class="ui mini gray button " type="button" (click)="clear()"><i class="sync icon"></i>ล้างข้อมูล</button>
+                    <button class="ui mini gray button " type="button" (click)="clear()"><i class="refresh icon"></i>ล้างข้อมูล</button>
                 </div><br>
             </form>
 
@@ -98,7 +98,8 @@
             <tr>
                 <th style="text-align: center !important">ลำดับ</th>
                 <th style="text-align: center !important">วันที่สั่งจ่าย</th>
-                <th style="text-align: center !important">เช็คเล่มที่</th>
+                <th style="text-align: center !important">เช็คเล่มที่</th>                      
+                <th style="text-align: center !important">ชื่อธนาคาร</th>     
                 <th style="text-align: center !important">จำนวนเงินสั่งจ่ายในเช็ค</th>
                 <th style="text-align: center !important">ประเภทงบประมาณ</th>
                 <th style="text-align: center !important">รายการ</th>
