--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-4/int09-1-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-4/int09-1-1-4.component.html
@@ -306,7 +306,7 @@
       </div>
       <div class="two wide column">
         <select class="ui dropdown search selection" style="width: 100%;" id="sector" (change)="sectorOnchange($event)">
-          <option value="">เลือก</option>
+          <option value="">กรุณาเลือก</option>
           <option value="1">ปกติ</option>
           <option value="2">เหมาจ่าย</option>
         </select>
